public/nopbai/Logs/Contest01/[ok][57000][IA1401][ce140238][A].cpp.log
Compile error
A.cpp:5:19: error: size of array 'arr' is too large
 int arr[1000000000];
                   ^
